--- a/src/components/receivedmessage/ReceivedMessage.css
+++ b/src/components/receivedmessage/ReceivedMessage.css
@@ -1,30 +1,21 @@
-.Message {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: flex-start;
-	margin: 1em;
-}
-
-.bubble {
+.speech-bubble-left {
 	position: relative;
-	display: inline-flex;
-	max-width: 50%;
-	color: #ffffff;
+	align-self: flex-start;
+	max-width: 80vw;
+	word-wrap: break-word;
 	background-color: #3e4a63;
-	border-radius: 0.4em;
+	color: #ffffff;
 	padding: 1em;
-	text-align: left;
+	border-radius: 0.4em;
 }
-
-.bubble:after {
-	content: "";
+.speech-bubble-left:after {
+	content: '';
 	position: absolute;
 	left: 0;
 	top: 50%;
 	width: 0;
 	height: 0;
 	border: 1em solid transparent;
-	color: #ffffff;
 	border-right-color: #3e4a63;
 	border-left: 0;
 	border-bottom: 0;
