--- a/src/components/receivedmessage/ReceivedMessage.css
+++ b/src/components/receivedmessage/ReceivedMessage.css
@@ -5,6 +5,7 @@
 	word-wrap: break-word;
 	background-color: #3e4a63;
 	color: #ffffff;
+	margin: 0.5em 0.5em 0.5em 1em;
 	padding: 1em;
 	border-radius: 0.4em;
 }
