--- a/src/components/message/Message.css
+++ b/src/components/message/Message.css
@@ -1,7 +1,7 @@
 .speech-bubble-right {
-	display: flex;
+	flex-direction: column;
 	align-self: flex-end;
-	margin: 0.5em 1em 0.5em 0.5em;
+	margin: 0 1em 0.5em 0.5em;
 	position: relative;
 	max-width: 80vw;
 	word-wrap: break-word;
@@ -27,12 +27,13 @@
 
 .speech-bubble-left {
 	position: relative;
+	flex-direction: column;
 	align-self: flex-start;
 	max-width: 80vw;
 	word-wrap: break-word;
 	background-color: #3e4a63;
 	color: #ffffff;
-	margin: 0.5em 0.5em 0.5em 1em;
+	margin: 0 0.5em 0.5em 1em;
 	padding: 1em;
 	border-radius: 0.4em;
 }
@@ -49,4 +50,32 @@
 	border-bottom: 0;
 	margin-top: -0.5em;
 	margin-left: -1em;
+}
+
+.speech-bubble-admin {
+	align-self: center;
+	position: relative;
+	margin-bottom: 0.5em;
+	max-width: 50vw;
+	word-wrap: break-word;
+	background-color: #3e4a63;
+	color: #ffffff;
+	padding: 1em;
+	border-radius: 0.4em;
+}
+
+.user-right {
+	align-self: flex-end;
+	margin: 0.5rem 1.8rem 0 0;
+	padding-bottom: 0.2rem;
+}
+.user-left {
+	align-self: flex-start;
+	margin: 0.5rem 0 0 1.8rem;
+	padding-bottom: 0.2rem;
+}
+.user-admin {
+	align-self: center;
+	margin-top: 0.5rem;
+	padding-bottom: 0.2rem;
 }
