--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,11 +1,12 @@
 .Login {
-	background-color: #3e4a63;
-	min-height: 100vh;
+	background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	align-items: center;
 	justify-content: center;
+	align-content: center;
+	margin: 0 auto;
 	color: #ffffff;
 	font-size: calc(10px + 2vmin);
 	text-align: center;
@@ -13,33 +14,45 @@
 
 .Login p {
 	margin-bottom: 5rem;
+	font-size: 1.3rem;
 }
 
 .login-form input,
 button {
 	display: flex;
-	align-items: center;
-	margin: 0.5rem;
+	justify-content: center;
+	margin: 0 auto;
 	width: 80vw;
-	font-size: 1.5rem;
-	text-align: center;
+	font-size: 1.6rem;
 }
 
 .login-form input[type='text'] {
 	padding: 0.2rem 0;
-}
-
-.login-form button[type='submit'] {
-	background-color: #3e4a63;
-	color: #ffffff;
-	margin-bottom: 5rem;
+	margin-bottom: 0.3rem;
 	text-align: center;
+	outline: none;
+}
+.login-form button[type='submit'] {
+	background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+	color: #ffffff;
+	margin-top: 0.3rem;
+	margin-bottom: 5rem;
 }
 .login-form button[type='submit']:hover {
-  background-color: #ffffff;
-	color: #3e4a63;
+	color: #5c76b4;
 }
 
 .error-msg {
-	/**/
+	display: inline-block;
+	width: 80vw;
+	padding: 0.5rem;
+	font-size: 1.5rem;
+}
+
+@media screen and (min-width: 500px) {
+	.login-form input,
+	button {
+		width: 50vw;
+		font-size: 1.2rem;
+	}
 }
