--- a/src/components/feed/Feed.css
+++ b/src/components/feed/Feed.css
@@ -1,5 +1,5 @@
 .Feed {
-  height: 30rem;
+  height: 30em;
   overflow: auto;
   scroll-behavior: smooth;
 }
@@ -8,4 +8,10 @@
   display: flex;
   flex-direction: column;
   font-size: 1.3em;
+}
+
+@media screen and (max-width: 320px) {
+  .Feed {
+    height: 24em;
+  }
 }
