--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,5 +1,9 @@
 .Login {
-	background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+	background: linear-gradient(
+		94deg,
+		rgb(97, 85, 153) 100%,
+		rgb(117, 101, 185) 100%
+	);
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -33,13 +37,17 @@ button {
 	outline: none;
 }
 .login-form button[type='submit'] {
-	background: linear-gradient(90deg, #4b6cb7 0%, #182848 100%);
+	background: linear-gradient(
+		94deg,
+		rgb(97, 85, 153) 100%,
+		rgb(117, 101, 185) 100%
+	);
 	color: #ffffff;
 	margin-top: 0.3rem;
 	margin-bottom: 5rem;
 }
 .login-form button[type='submit']:hover {
-	color: #5c76b4;
+	color: rgba(255,255,255,0.5);
 }
 
 .error-msg {
