change color scheme

--- a/src/components/chatroom/ChatRoom.css
+++ b/src/components/chatroom/ChatRoom.css
@@ -4,7 +4,7 @@
 		flex-direction: column;
 		justify-content: center;
 		height: 100vh;
-		background: #645f7c;
+		background: #5c5772;
 		margin: 0 auto;
 	}
 
