--- a/src/components/message/MessageDarkMode.css
+++ b/src/components/message/MessageDarkMode.css
@@ -1,60 +1,59 @@
-.speech-bubble-left {
+.speech-bubble-leftDarkMode {
 	position: relative;
 	flex-direction: column;
 	align-self: flex-start;
 	max-width: 80vw;
 	word-wrap: break-word;
-	background: rgb(93, 83, 134);
-	color: #ffff;
+	background: rgb(63, 66, 77);
+	color: rgba(255,255,255,0.8);
 	margin: 0 0.5em 0.5em 1em;
 	padding: 1em;
 	border-radius: 0 0.9em 0.9em 0.9em;
-	box-shadow: 2px 3px 5px -3px #afafaf;
+	box-shadow: 2px 3px 5px -3px #212121;
 }
 
-.speech-bubble-right {
+.speech-bubble-rightDarkMode {
 	flex-direction: column;
 	align-self: flex-end;
 	margin: 0 1em 0.5em 0.5em;
 	position: relative;
 	max-width: 80vw;
 	word-wrap: break-word;
-	background: linear-gradient(
-		94deg,
-		rgb(93, 83, 134) 100%,
-		rgb(113, 101, 167) 100%
-	);
-	color: #ffff;
+	background: rgb(63, 66, 77);
+	color: rgba(255,255,255,0.8);
 	padding: 1em;
 	border-radius: 0.9em 0 0.9em 0.9em;
-	box-shadow: 2px 3px 5px -3px #afafaf;
+	box-shadow: 2px 3px 5px -3px #212121;
 }
 
-.speech-bubble-admin {
+.speech-bubble-adminDarkMode {
 	align-self: center;
 	position: relative;
 	margin-bottom: 0.5em;
 	max-width: 50vw;
 	word-wrap: break-word;
-	background: #eeeeee;
-	color: rgba(0, 0, 0, 0.7);
+	background: #c2c2c2;
+	color: rgba(0, 0, 0, 0.8);
 	padding: 1em;
 	border-radius: 0.9em;
-	box-shadow: 3px 4px 5px -3px #afafaf;
+	box-shadow: 2px 3px 5px -3px #212121;
 }
 
-.user-right {
-	align-self: flex-end;
-	margin: 0.5rem 1.8rem 0 0;
-	padding-bottom: 0.2rem;
-}
-.user-left {
+.user-leftDarkMode {
 	align-self: flex-start;
 	margin: 0.5rem 0 0 1.8rem;
 	padding-bottom: 0.2rem;
+	color: rgba(255, 255, 255, 0.7);
 }
-.user-admin {
+.user-rightDarkMode {
+	align-self: flex-end;
+	margin: 0.5rem 1.8rem 0 0;
+	padding-bottom: 0.2rem;
+	color: rgba(255, 255, 255, 0.7);
+}
+.user-adminDarkMode {
 	align-self: center;
 	margin-top: 0.5rem;
 	padding-bottom: 0.2rem;
+	color: rgba(255, 255, 255, 0.7);
 }
