--- a/src/components/header/HeaderDarkMode.css
+++ b/src/components/header/HeaderDarkMode.css
@@ -1,20 +1,19 @@
 .HeaderDarkMode {
 	display: flex;
+	padding-bottom: 0.5rem;
 	background: rgb(28, 29, 32);
 	color: rgba(255,255,255,0.7);
 }
 
 .HeaderDarkMode h2 {
 	align-self: center;
-	width: 30%;
 	margin: 0 auto;
 }
 
 .HeaderDarkMode a img {
 	margin: 0.5em;
-	width: 2.5rem;
+	width: 2.2rem;
 	background: rgba(255,255,255,0.8);
 	border-radius: 100%;
 	object-fit: cover;
 }
-
