--- a/src/components/message/MessageDarkMode.css
+++ b/src/components/message/MessageDarkMode.css
@@ -2,7 +2,7 @@
 	position: relative;
 	flex-direction: column;
 	align-self: flex-start;
-	max-width: 80vw;
+	max-width: 15rem;
 	word-wrap: break-word;
 	background: rgb(63, 66, 77);
 	color: rgba(255,255,255,0.8);
@@ -17,7 +17,7 @@
 	align-self: flex-end;
 	margin: 0 1em 0.5em 0.5em;
 	position: relative;
-	max-width: 80vw;
+	max-width: 15rem;
 	word-wrap: break-word;
 	background: rgb(63, 66, 77);
 	color: rgba(255,255,255,0.8);
@@ -30,7 +30,7 @@
 	align-self: center;
 	position: relative;
 	margin-bottom: 0.5em;
-	max-width: 50vw;
+	max-width: 12rem;
 	word-wrap: break-word;
 	background: #c2c2c2;
 	color: rgba(0, 0, 0, 0.8);
@@ -57,3 +57,4 @@
 	padding-bottom: 0.2rem;
 	color: rgba(255, 255, 255, 0.7);
 }
+
